
  o Added "envir" argument in exams2moodle() that is passed on to xweave().

  o The print() method for "exams_metainfo" objects received a new "block"
    argument so that print(exams_metainfo(x), which = 1, block = 5) prints
    the metainformation (type/solution) of the first exam in the object x
    (output from any exams2xyz() function) in blocks of 5 exercises.


Changes in Version 2.3-2

  o nops_scan() gained a new argument trim=0.3 that controls how much of
    check boxes is trimmed in order to shave the borders prior to determining
    the average gray level. In versions up to 2.3-1 this implicitly had a
    value of 0.25 hard-coded. Now the default was increased to 0.3 in order
    to shave box borders more reliably.

  o nops_scan() tries to process registration numbers more reliably.
    In case one of the registration columns contains more than one potential
    mark, the heuristics of determining the intended mark have been improved.

  o New exercise confint3.Rmd/Rnw that illustrates how to use the "verbatim"
    clozetype for Moodle. The exercises yields 100% of the points for the
    correct solution based on t quantiles but still 50% for a partially
    correct solution based on normal quantiles (contributed by Ulrike
    Groemping).

  o nops_eval() gained a new argument labels=NULL that can be used to
    give labels for the marks that differ from the default
    (length(mark) + 1):1.

  o In all LaTeX templates that use Helvetica (phv) as the font for the main
    text, this is also used now in math mode by \usepackage[helvet]{sfmath}
    (rather than \usepackage{sfmath}, as employed previously). In particular,
    this also affects exams2nops() and tex2image() output.

  o In exams2nops() the "header" argument can also be specified simply as
    header = "\\mycommand{value}" rather than header = list(mycommand = "value").
    The former is more flexible, e.g., for passing additional options or more